[package]
name = "remux"
version = "0.9.0"
authors = [ "Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>" ]
description = "Remux multiplexer over reliable, ordered connections"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "remux", "network", "protocol" ]
categories = [ "cryptography::cryptocurrencies", "network-programming" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/remux"
documentation = "https://docs.rs/remux"

[dependencies]
futures = { version = "0.3.4", default-features = false, features = ["std"] }
log = "0.4.8"
nohash = "0.2"
parking_lot = "0.11"
rand = "0.8.3"
static_assertions = "1"

[dev-dependencies]
anyhow = "1"
criterion = "0.3"
env_logger = "0.8"
futures = "0.3.4"
quickcheck = "1.0"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
constrained-connection = "0.1"

[[bench]]
name = "concurrent"
harness = false
